--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@syncfusion/ej2-react-maps": "^30.1.37",
     "@syncfusion/ej2-react-navigations": "^30.1.41",
     "@syncfusion/ej2-react-splitbuttons": "^30.1.41",
+    "appwrite": "^18.2.0",
+    "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "isbot": "^5.1.27",
